docs: finish migrating sign-up docs to mdx tables

--- a/src/pages/reference-js/sign-in/authenticate-with.mdx
+++ b/src/pages/reference-js/sign-in/authenticate-with.mdx
@@ -11,43 +11,61 @@ These are all methods on [the `SignIn` class](/reference-js/sign-in/sign-in) tha
 
 ### `authenticateWithRedirect()`
 
-```
-authenticateWithRedirect(params: AuthenticateWithRedirectParams) => Promise<void>
+```typescript
+function authenticateWithRedirect(params: AuthenticateWithRedirectParams): Promise<void>;
 ```
 
 Signs in users via OAuth. This is commonly known as Single Sign On (SSO), where an external account is used for verifying the user's identity.
 
 #### `AuthenticateWithRedirectParams`
 
-| Name                | Type   | Description                                                  |
-| ------------------- | ------ | ------------------------------------------------------------ |
-| strategy            | string | The OAuth provider that will be used for singing in. Must be one of the supported [`OAuthStrategy`](#oauthstrategy) . |
-| redirectUrl         | string | The URL that the OAuth provider should redirect to, on successful authorization on their part. |
-| redirectUrlComplete | string | The URL that the user will be redirected to, after successful authorization from the OAuth provider and Clerk sign in |
+<Tables
+    headings={['Name', 'Type', 'Description']}
+    headingsMeta={[{}, {}, {maxWidth: "300px"}]}
+    rows={[{cells: [
+        <code>strategy</code>,
+        <code>string</code>,
+        <>The OAuth provider that will be used for singing in. Must be one of the supported <a href="#oauthstrategy"><code>OAuthStrategy</code></a>.</>
+    ]}, {cells: [
+        <code>redirectUrl</code>,
+        <code>string</code>,
+        <>The URL that the OAuth provider should redirect to, on successful authorization on their part.</>
+    ]}, {cells: [
+        <code>redirectUrlComplete</code>,
+        <code>string</code>,
+        <>The URL that the user will be redirected to, after successful authorization from the OAuth provider and Clerk sign in</>
+    ]}]}
+/>
 
 #### Returns
 
-| Type          | Description                                                  |
-| ------------- | ------------------------------------------------------------ |
-| {"Promise<void>"} | This method returns a `Promise` which doesn't resolve to any value. |
+<Tables
+    headings={['Type', 'Description']}
+    headingsMeta={[{}, {maxWidth: "300px"}]}
+    rows={[{cells: [
+        <code>{"Promise<void>"}</code>,
+        <>This method returns a <code>Promise</code> which doesn't resolve to any value.</>
+    ]}]}
+/>
 
 ### `authenticateWithMetamask()`
 
-```
-authenticateWithMetamask() => Promise<SignInResource>
+```typescript
+function authenticateWithMetamask(): Promise<SignInResource>;
 ```
 
 Starts a sign in flow that uses the Metamask browser extension to authenticate the user using their public wallet address.
 
-**Parameters**
+#### Returns
 
-This methods does not accept any parameters.
-
-**Returns**
-
-| Type                    | Description                                                  |
-| ----------------------- | ------------------------------------------------------------ |
-| {"Promise<SignInResource>"} | This method returns a `Promise` which resolves to the current `SignInResource`. |
+<Tables
+    headings={['Type', 'Description']}
+    headingsMeta={[{}, {maxWidth: "300px"}]}
+    rows={[{cells: [
+        <code>{"Promise<SignInResource>"}</code>,
+        <>This method returns a <code>Promise</code> which resolves to the current <a href="/reference-js/sign-in/sign-in"><code>SignIn</code></a>.</>
+    ]}]}
+/>
 
 ### `authenticateWithWeb3()`
 
@@ -58,39 +76,125 @@ function authenticateWithWeb3(params: AuthenticateWithWeb3Params): Promise<SignI
 #### `AuthenticateWithWeb3Params`
 
 
-| Name                | Type   | Description                                                  |
-| ------------------- | ------ | ------------------------------------------------------------ |
-| identifier | string | |
-| generateSignature | {"(opts: GenerateSignatureParams) => Promise<string>"} |  |
+<Tables
+    headings={['Name', 'Type', 'Description']}
+    headingsMeta={[{}, {maxWidth: "300px"}, {maxWidth: "300px"}]}
+    rows={
+        [{cells: [
+            <code>identifier</code>,
+            <code>{"string"}</code>,
+            <>The user's Web3 ID</>
+        ]},
+        {cells: [
+        <code>generateSignature</code>,
+        <code>{"(opts: GenerateSignatureParams) => Promise<string>"}</code>,
+        <>The method of how to generate the signature for the Web3 sign-in. See <a href="#generatesignatureparams"><code>GenerateSignatureParams</code></a> for more details.</>
+        ]}
+    ]}
+/>
 
-#### `GenerateSignatureParams`
+##### `GenerateSignatureParams`
 
-| Name                | Type   | Description                                                  |
-| ------------------- | ------ | ------------------------------------------------------------ |
-| identifier | string | |
-| nonce | string | |
+<Tables
+    headings={['Name', 'Type', 'Description']}
+    headingsMeta={[{}, {maxWidth: "300px"}, {maxWidth: "300px"}]}
+    rows={
+        [{cells: [
+            <code>identifier</code>,
+            <code>{"string"}</code>,
+            <>The user's Web3 ID</>
+        ]},
+        {cells: [
+        <code>nonce</code>,
+        <code>{"string"}</code>,
+        <>The <a href="https://en.wikipedia.org/wiki/Cryptographic_nonce">crypographic nonce</a> used in the sign-in.</>
+        ]}
+    ]}
+/>
 
 ## Types
 
 ### `OAuthStrategy`
 
-```
-oauth_facebook | oauth_github | oauth_google | oauth_hubspot | oauth_tiktok | oauth_gitlab | oauth_discord | oauth_twitter | oauth_twitch | oauth_linkedin | oauth_dropbox | oauth_bitbucket | oauth_microsoft | oauth_notion
+```typescript
+type OAuthStrategy = |
+"oauth_facebook"|
+"oauth_github"|
+"oauth_google"|
+"oauth_hubspot"|
+"oauth_tiktok"|
+"oauth_gitlab"|
+"oauth_discord"|
+"oauth_twitter"|
+"oauth_twitch"|
+"oauth_linkedin"|
+"oauth_dropbox"|
+"oauth_bitbucket"|
+"oauth_microsoft"|
+"oauth_notion";
 ```
 
-| Value           | Description                                           |
-| --------------- | ----------------------------------------------------- |
-| oauth_facebook  | Specify Facebook as the verification OAuth provider.  |
-| oauth_github    | Specify Github as the verification OAuth provider.    |
-| oauth_google    | Specify Google as the verification OAuth provider.    |
-| oauth_hubspot   | Specify HubSpot as the verification OAuth provider.   |
-| oauth_tiktok    | Specify TikTok as the verification OAuth provider.    |
-| oauth_gitlab    | Specify GitLab as the verification OAuth provider.    |
-| oauth_discord   | Specify Discord as the verification OAuth provider.   |
-| oauth_twitter   | Specify Twitter as the verification OAuth provider.   |
-| oauth_twitch    | Specify Twitch as the verification OAuth provider.    |
-| oauth_linkedin  | Specify LinkedIn as the verification OAuth provider.  |
-| oauth_dropbox   | Specify Dropbox as the verification OAuth provider.   |
-| oauth_bitbucket | Specify Bitbucket as the verification OAuth provider. |
-| oauth_microsoft | Specify Microsoft as the verification OAuth provider. |
-| oauth_notion    | Specify Notion as the verification OAuth provider.    |
+The OAuth provider that will be used for singing in. Must be one of the supported OAuthStrategy.
+
+<Tables
+    headings={['Name', 'Type', 'Description']}
+    headingsMeta={[{}, {}, {maxWidth: "300px"}]}
+    rows={[{cells: [
+        <code>oauth_facebook</code>,
+        <code>string</code>,
+        <>Specify Facebook as the verification OAuth provider.</>
+    ]}, {cells: [
+        <code>oauth_github</code>,
+        <code>string</code>,
+        <>Specify Github as the verification OAuth provider.</>
+    ]}, {cells: [
+        <code>oauth_google</code>,
+        <code>string</code>,
+        <>Specify Google as the verification OAuth provider.</>
+    ]}, {cells: [
+        <code>oauth_hubspot</code>,
+        <code>string</code>,
+        <>Specify HubSpot as the verification OAuth provider.</>
+    ]}, {cells: [
+        <code>oauth_tiktok</code>,
+        <code>string</code>,
+        <>Specify TikTok as the verification OAuth provider.</>
+    ]}, {cells: [
+        <code>oauth_gitlab</code>,
+        <code>string</code>,
+        <>Specify GitLab as the verification OAuth provider.</>
+    ]}, {cells: [
+        <code>oauth_discord</code>,
+        <code>string</code>,
+        <>Specify Discord as the verification OAuth provider.</>
+    ]}, {cells: [
+        <code>oauth_twitter</code>,
+        <code>string</code>,
+        <>Specify Twitter as the verification OAuth provider.</>
+    ]}, {cells: [
+        <code>oauth_twitch</code>,
+        <code>string</code>,
+        <>Specify Twitch as the verification OAuth provider.</>
+    ]}, {cells: [
+        <code>oauth_linkedin</code>,
+        <code>string</code>,
+        <>Specify LinkedIn as the verification OAuth provider.</>
+    ]}, {cells: [
+        <code>oauth_dropbox</code>,
+        <code>string</code>,
+        <>Specify Dropbox as the verification OAuth provider.</>
+    ]}, {cells: [
+        <code>oauth_bitbucket</code>,
+        <code>string</code>,
+        <>Specify Bitbucket as the verification OAuth provider.</>
+    ]}, {cells: [
+        <code>oauth_microsoft</code>,
+        <code>string</code>,
+        <>Specify Microsoft as the verification OAuth provider.</>
+    ]},
+    {cells: [
+        <code>oauth_notion</code>,
+        <code>string</code>,
+        <>Specify Notion as the verification OAuth provider.</>
+    ]}]}
+/>
