--- a/src/pages/reference-js/sign-in/sign-in.mdx
+++ b/src/pages/reference-js/sign-in/sign-in.mdx
@@ -96,7 +96,7 @@ Depending on the use-case and the `params` you pass to the `create` method, it c
 {cells: [<code>ticket</code>, <code>string</code>, <>Optional. If the strategy is <strong><code>ticket</code></strong> you need to provide the ticket <em>or token</em> generated from the Backend API.</>]},
 {cells: [<code>redirectUrl</code>, <code>string</code>, <>The URL that the OAuth provider should redirect to, on successful authorization on their part. This parameter is required only for OAuth strategies <strong><code>(oauth_*)</code></strong>.</>]},
 {cells: [<code>actionCompleteRedirectUrl</code>, <code>string</code>, <>The URL that the user will be redirected to, after successful authorization from the OAuth provider and Clerk sign in. This parameter is required only for OAuth strategies <strong><code>(oauth_*)</code></strong>.</>]},
-//{cells: [<code>transfer</code>, <code>boolean</code>, <></>]},
+{cells: [<code>transfer</code>, <code>boolean</code>, <>Transfer the user to a dedicated sign in for an oauth flow.</>]},
   ]}
   />
 
@@ -144,14 +144,25 @@ The second function can be used to stop polling at any time, allowing for full c
 
 #### Returns
 
-| Name                | Type   | Description                                                  |
-| ------------------- | ------ | ------------------------------------------------------------ |
-| startMagicLinkFlow  | {"(params: SignInStartMagicLinkFlowParams) => Promise<SignIn>"} | Function to start the magic link flow. It prepares a magic link verification and polls for the verification result. Accepts [SignInStartMagicLinkFlowParams](#signinstartmagicflowparams). Returns a `Promise` which resolves to a `SignIn`. |
-| cancelMagicLinkFlow | () => void | Function to cleanup the magic link flow. Stops waiting for verification results. |
+`createMagicLinkFlow` returns an object with two functions:
+
+<Tables
+  headings={["Name", "Type", "Description"]}
+  headingsMeta={[{}, {maxWidth: "300px"}, {maxWidth: "300px"}]}
+  rows={[
+    {cells: [<code>startMagicLinkFlow</code>, <code>(params: <a href="#signinstartmagiclinkflowparams">SignInStartMagicLinkFlowParams</a>) {"=>"} Promise{"<"}<a href="/reference-js/sign-in/sign-in">SignIn</a>{">"}</code>, <>Function to start the magic link flow. It prepares a magic link verification and polls for the verification result.</>]},
+    {cells: [<code>cancelMagicLinkFlow</code>, <code>{"() => void"}</code>, <>Function to cleanup the magic link flow. Stops waiting for verification results.</>]},
+  ]}
+/>
 
 #### `SignInStartMagicFlowParams`
 
-| Name           | Type   | Description                                                  |
-| -------------- | ------ | ------------------------------------------------------------ |
-| redirectUrl    | string | The magic link target URL. Users will be redirected here once they click the magic link from their email. |
-| emailAddressId | string | The ID of the user's email address that's going to be used as the first factor identification for verification. |
+
+<Tables
+  headings={["Name", "Type", "Description"]}
+  headingsMeta={[{}, {maxWidth: "300px"}, {maxWidth: "300px"}]}
+  rows={[
+    {cells: [<code>redirectUrl</code>, <code>string</code>, <>The magic link target URL. Users will be redirected here once they click the magic link from their email.</>]},
+    {cells: [<code>emailAddressId</code>, <code>string</code>, <>The ID of the user's email address that's going to be used as the first factor identification for verification.</>]},
+  ]}
+/>
