chore: signin additional methods

--- a/src/pages/reference-js/sign-in/sign-in.mdx
+++ b/src/pages/reference-js/sign-in/sign-in.mdx
@@ -166,3 +166,23 @@ The second function can be used to stop polling at any time, allowing for full c
     {cells: [<code>emailAddressId</code>, <code>string</code>, <>The ID of the user's email address that's going to be used as the first factor identification for verification.</>]},
   ]}
 />
+
+## Additional Methods
+
+In addition to the methods listed above, the `SignIn` class also has the following methods:
+
+### First Factor
+
+*   [`prepareFirstFactor()`](/reference-js/sign-in/first-factor#preparefirstfactor)
+*   [`attemptFirstFactor()`](/reference-js/sign-in/first-factor#attemptfirstfactor)
+
+### Second Factor
+
+*   [`prepareSecondFactor()`](/reference-js/sign-in/second-factor#preparesecondfactor)
+*   [`attemptSecondFactor()`](/reference-js/sign-in/second-factor#attemptsecondfactor)
+
+### Authenticate With
+
+*   [`authenticateWithRedirect()`](/reference-js/sign-in/authenticate-with#authenticatewithredirect)
+*   [`authenticateWithMetamask()`](/reference-js/sign-in/authenticate-with#authenticatewithmetamask)
+*   [`authenticateWithWeb3()`](/reference-js/sign-in/authenticate-with#authenticatewithweb3)
