docs: fill in details from prod docs

--- a/src/pages/reference-js/sign-up/authenticate.mdx
+++ b/src/pages/reference-js/sign-up/authenticate.mdx
@@ -15,7 +15,8 @@ function authenticateWithRedirect(
 ): Promise<void>;
 ```
 
-Test
+Signs up users via OAuth, where an external account provider is used to verify the user's identity and provide certain information about the user.
+
 
 ## `authenticateWithWeb3()`
 
@@ -33,4 +34,4 @@ Test
 function authenticateWithMetamask(params?: SignUpAuthenticateWithMetamaskParams): Promise<SignUp>;
 ```
 
-Test
+Starts a sign up flow that uses the Metamask browser extension to authenticate the user using their public wallet address.
