--- a/src/pages/reference-js/sign-up/email-verification.mdx
+++ b/src/pages/reference-js/sign-up/email-verification.mdx
@@ -13,7 +13,9 @@ Test
 function prepareEmailAddressVerification(params?: PrepareEmailAddressVerificationParams): Promise<SignUp>;
 ```
 
-Test
+Helper method that allows you to initiate a verification process for an email address. It basically sends a one-time code to the email address already supplied to the current sign up.
+
+This is equivalent to calling `SignUp.prepareVerification("email_code")`.
 
 ## `attemptEmailAddressVerification()`
 
@@ -21,4 +23,6 @@ Test
 function attemptEmailAddressVerification(params: AttemptEmailAddressVerificationParams): Promise<SignUp>;
 ```
 
-Test
+Helper method that attempts to complete the verification process for an email address. It basically verifies that the supplied code is the same as the one-time code that was sent to the email address during the prepare verification phase.
+
+This is equivalent to calling `SignUp.attemptVerification({strategy: "email_code", ...params})`.
