--- a/src/pages/reference-js/sign-up/phone-verification.mdx
+++ b/src/pages/reference-js/sign-up/phone-verification.mdx
@@ -14,7 +14,9 @@ Test
 function preparePhoneNumberVerification(params?: PreparePhoneNumberVerificationParams): Promise<SignUp>;
 ```
 
-Test
+Helper method that allows you to initiate a verification process for a phone number. It basically sends a one-time code to the phone number already supplied to the current sign up.
+
+This is equivalent to calling `SignUp.prepareVerification("phone_code")`.
 
 ## `attemptPhoneNumberVerification()`
 
@@ -22,4 +24,6 @@ Test
 function attemptPhoneNumberVerification(params: AttemptPhoneNumberVerificationParams): Promise<SignUp>;
 ```
 
-Test
+Helper method that attempts to complete the verification process for a phone number. It basically verifies that the supplied code is the same as the one-time code that was sent to the phone number during the prepare verification phase.
+
+This is equivalent to calling `SignUp.attemptVerification({strategy: "phone_code", ...params})`.
