--- a/src/pages/reference-js/sign-up/sign-up.mdx
+++ b/src/pages/reference-js/sign-up/sign-up.mdx
@@ -52,7 +52,11 @@ Also, the attributes of the `SignUp` object can basically be grouped into three 
 function create(params: SignUpCreateParams): Promise<SignUpResource>;
 ```
 
-Test
+This method initiates a new sign-up flow. It creates a new SignUp object and de-activates any existing SignUp that the client might already had in progress.
+
+The form of the given `params` depends on the configuration of the instance. Choices on the instance settings affect which options are available to use.
+
+The `create` method will return a promise of the new SignUp object. This sign up might be complete if you supply the required fields in one go. However, this is not mandatory. Our sign-up process provides great flexibility and allows users to easily create multi-step sign-up flows.
 
 ### `update()`
 
@@ -60,7 +64,9 @@ Test
 function update(params: SignUpUpdateParams): Promise<SignUpResource>;
 ```
 
-Test
+This method is used to update the current sign up.
+
+As with `create`, the form of the given `params` depends on the configuration of the instance.
 
 ### `createMagicLinkFlow()`
 
@@ -68,4 +74,8 @@ Test
 function createMagicLinkFlow(): CreateMagicLinkFlowReturn<StartMagicLinkFlowParams, SignUpResource>;
 ```
 
-Test
+Sets up a sign up with magic link flow. Calling `createMagicLinkFlow()` will return two functions.
+
+The first function is async and starts the magic link flow, preparing a magic link verification. It sends the magic link email and starts polling for verification results. The signature is `startMagicLinkFlow({ redirectUrl: string }) => Promise<SignUpResource>`.
+
+The second function can be used to stop polling at any time, allowing for full control of the flow and cleanup. The signature is `cancelMagicLinkFlow() => void`.
