--- a/src/pages/reference-js/sign-up/verification.mdx
+++ b/src/pages/reference-js/sign-up/verification.mdx
@@ -13,7 +13,10 @@ Test
 function prepareVerification(params: PrepareVerificationParams): Promise<SignUp>;
 ```
 
-Test
+The `prepareVerification` is used to initiate the verification process for a field that requires it. As mentioned above, there are two fields that need to be verified:
+
+- emailAddress: The email address can be verified via an email code. This is a one-time code that is sent to the email already provided to the SignUp object. The `prepareVerification` sends this email.
+- phoneNumber: The phone number can be verified via a phone code. This is a one-time code that is sent via an SMS to the phone already provided to the SignUp object. The `prepareVerification` sends this SMS.
 
 ## `attemptVerification()`
 
@@ -21,4 +24,6 @@ Test
 function attemptVerification(params: AttemptVerificationParams): Promise<SignUp>;
 ```
 
-Test
+Attempts to complete the in-flight verification process that corresponds to the given strategy. In order to use this method, you should first initiate a verification process by calling [SignUp.prepareVerification](https://clerk.com/docs/reference/clerkjs/signup#prepare-verification).
+
+Depending on the strategy, the method parameters could differ.
