--- a/src/pages/reference-js/sign-up/web3-verification.mdx
+++ b/src/pages/reference-js/sign-up/web3-verification.mdx
@@ -13,7 +13,9 @@ Test
 function prepareWeb3WalletVerification(): Promise<SignUp>;
 ```
 
-Test
+Helper method that allows you to initiate a verification process for a web3 wallet public address. It sends the public address to the server and expects a nonce that will need to be signed.
+
+This is equivalent to calling `SignUp.prepareVerification("web3_metamask_signature")`.
 
 ## `attemptWeb3WalletVerification()`
 
@@ -21,4 +23,6 @@ Test
 function attemptWeb3WalletVerification(params: AttemptWeb3WalletVerificationParams): Promise<SignUp>;
 ```
 
-Test
+Helper method that attempts to complete the verification process for a web3 wallet public address. It basically verifies that the supplied code is the same as the one-time code that was sent to the phone number during the prepare verification phase.
+
+This is equivalent to calling `SignUp.attemptVerification({strategy: "web3_metamask_signature", signature: "..." })`.
