--- a/src/pages/reference-js/sign-up/sign-up.mdx
+++ b/src/pages/reference-js/sign-up/sign-up.mdx
@@ -22,27 +22,35 @@ Also, the attributes of the `SignUp` object can basically be grouped into three 
 
 ## Attributes
 
-| Name             | Type                        | Description                                                  |
-| ---------------- | --------------------------- | ------------------------------------------------------------ |
-| status           | string \| null              | The status of the current sign-up. It can take the following values:**missing_requirements:** There are required fields that are either missing or they are unverified.**complete:** All the required fields have been supplied and verified, so the sign-up is complete and a new user and a session have been created.**abandoned:** The sign-up has been inactive for a long period of time, thus it's considered as abandoned and need to start over. |
-| requiredFields   | string[]                    | An array of all the required fields that need to be supplied and verified in order for this sign-up to be marked as complete and converted into a user. |
-| optionalFields   | string[]                    | An array of all the fields that can be supplied to the sign-up, but their absence does not prevent the sign-up from being marked as complete. |
-| missingFields    | string[]                    | An array of all the fields whose values are not supplied yet but they are mandatory in order for a sign-up to be marked as complete. |
-| unverifiedFields | string[]                    | An array of all the fields whose values have been supplied, but they need additional verification in order for them to be accepted. Examples of such fields are `emailAddress` and `phoneNumber`. |
-| verifications    | SignUpVerificationsResource | An object that contains information about all the verifications that are in-flight. |
-| username         | string \| null              | The username supplied to the current sign-up. This attribute is available only if usernames are enabled. Check the available instance settings for more information. |
-| emailAddress     | string \| null              | The email address supplied to the current sign-up. This attribute is available only if the selected contact information includes email address. Check the available instance settings for more information |
-| phoneNumber      | string \| null              | The phone number supplied to the current sign-up. This attribute is available only if the selected contact information includes phone number. Check the available instance settings for more information. |
-| web3Wallet       | string \| null              | The Web3 wallet public address supplied to the current sign-up. In [Ethereum](https://docs.metamask.io/guide/common-terms.html#address-public-key), the address is made up of `0x` + `40 hexadecimal characters`. |
-| hasPassword      | boolean                     | The value of this attribute is true if a password was supplied to the current sign-up. This attribute is available only if password-based authentication is enabled. Check the available instance settings for more information. |
-| firstName        | string \| null              | The first name supplied to the current sign-up. This attribute is available only if name is enabled in personal information. Check the available for more information. lastName |
-| lastName         | string \| null              | The last name supplied to the current sign-up. This attribute is available only if name is enabled in personal information. Check the available instance settings for more information. |
-| unsafeMetadata   | {"{[string]: any} \| null"}     | Metadata that can be read and set from the frontend. Once the sign up is complete, the value of this field will be automatically copied to the newly created user's unsafe metadata. One common use case for this attribute is to use it to implement custom fields that can be collected during sign up and will automatically be attached to the created User object. |
-| createdSessionId | string \| null              | The identifier of the newly-created session. This attribute is populated only when the sign-up is complete. |
-| createdUserId    | string \| null              | The identifier of the newly-created user. This attribute is populated only when the sign-up is complete. |
-| abandonAt        | number \| null              | The epoch numerical time when the sign-up was abandoned by the user. |
-
-
+<Tables
+  headings={["Name", "Type", "Description"]}
+  headingsMeta={[{}, {}, {maxWidth: "300px"}]}
+  rows={[
+{cells: [<code>status</code>, <code>string | null</code>, <>The status of the current sign-up. It can take the following values:
+<ul>
+<li><strong><code>missing_requirements:</code></strong> There are required fields that are either missing or they are unverified.</li>
+<li><strong><code>complete:</code></strong> All the required fields have been supplied and verified, so the sign-up is complete and a new user and a session have been created.</li>
+<li><strong><code>abandoned:</code></strong> The sign-up has been inactive for a long period of time, thus it's considered as abandoned and need to start over.</li>
+</ul>
+</>]},
+{cells: [<code>requiredFields</code>, <code>string[]</code>, <>An array of all the required fields that need to be supplied and verified in order for this sign-up to be marked as complete and converted into a user.</>]},
+{cells: [<code>optionalFields</code>, <code>string[]</code>, <>An array of all the fields that can be supplied to the sign-up, but their absence does not prevent the sign-up from being marked as complete.</>]},
+{cells: [<code>missingFields</code>, <code>string[]</code>, <>An array of all the fields whose values are not supplied yet but they are mandatory in order for a sign-up to be marked as complete.</>]},
+{cells: [<code>unverifiedFields</code>, <code>string[]</code>, <>An array of all the fields whose values have been supplied, but they need additional verification in order for them to be accepted. Examples of such fields are <code>emailAddress</code> and <code>phoneNumber</code>.</>]},
+{cells: [<code>verifications</code>, <code>SignUpVerifications</code>, <>An object that contains information about all the verifications that are in-flight.</>]},
+{cells: [<code>username</code>, <code>string | null</code>, <>The username supplied to the current sign-up. This attribute is available only if usernames are enabled. Check the available instance settings for more information.</>]},
+{cells: [<code>emailAddress</code>, <code>string | null</code>, <>The email address supplied to the current sign-up. This attribute is available only if the selected contact information includes email address. Check the available instance settings for more information</>]},
+{cells: [<code>phoneNumber</code>, <code>string | null</code>, <>The phone number supplied to the current sign-up. This attribute is available only if the selected contact information includes phone number. Check the available instance settings for more information.</>]},
+{cells: [<code>web3Wallet</code>, <code>string | null</code>, <>The Web3 wallet public address supplied to the current sign-up. In <a href="https://docs.metamask.io/guide/common-terms.html#address-public-key">Ethereum</a>, the address is made up of <strong><code>0x</code> + <code>40 hexadecimal characters</code></strong>.</>]},
+{cells: [<code>hasPassword</code>, <code>boolean</code>, <>The value of this attribute is true if a password was supplied to the current sign-up. This attribute is available only if password-based authentication is enabled. Check the available instance settings for more information.</>]},
+{cells: [<code>firstName</code>, <code>string | null</code>, <>The first name supplied to the current sign-up. This attribute is available only if name is enabled in personal information. Check the available for more information. lastName</>]},
+{cells: [<code>lastName</code>, <code>string | null</code>, <>The last name supplied to the current sign-up. This attribute is available only if name is enabled in personal information. Check the available instance settings for more information.</>]},
+{cells: [<code>unsafeMetadata</code>, <code>{"{[string]: any} \| null"}</code>, <>Metadata that can be read and set from the frontend. Once the sign up is complete, the value of this field will be automatically copied to the newly created user's unsafe metadata. One common use case for this attribute is to use it to implement custom fields that can be collected during sign up and will automatically be attached to the created User object.</>]},
+{cells: [<code>createdSessionId</code>, <code>string | null</code>, <>The identifier of the newly-created session. This attribute is populated only when the sign-up is complete.</>]},
+{cells: [<code>createdUserId</code>, <code>string | null</code>, <>The identifier of the newly-created user. This attribute is populated only when the sign-up is complete.</>]},
+{cells: [<code>abandonAt</code>, <code>number | null</code>, <>The epoch numerical time when the sign-up was abandoned by the user.</>]},
+  ]}
+/>
 
 ## Methods
 
