docs: finish sign-up's authenticate-with docs

--- a/src/pages/reference-js/sign-in/authenticate-with.mdx
+++ b/src/pages/reference-js/sign-in/authenticate-with.mdx
@@ -20,9 +20,9 @@ Signs in users via OAuth. This is commonly known as Single Sign On (SSO), where 
 #### `AuthenticateWithRedirectParams`
 
 <Tables
-    headings={['Name', 'Type', 'Description']}
-    headingsMeta={[{}, {}, {maxWidth: "300px"}]}
-    rows={[{cells: [
+  headings={['Name', 'Type', 'Description']}
+  headingsMeta={[{}, {}, {maxWidth: "300px"}]}
+  rows={[{cells: [
         <code>strategy</code>,
         <code>string</code>,
         <>The OAuth provider that will be used for singing in. Must be one of the supported <a href="#oauthstrategy"><code>OAuthStrategy</code></a>.</>
@@ -40,9 +40,9 @@ Signs in users via OAuth. This is commonly known as Single Sign On (SSO), where 
 #### Returns
 
 <Tables
-    headings={['Type', 'Description']}
-    headingsMeta={[{}, {maxWidth: "300px"}]}
-    rows={[{cells: [
+  headings={['Type', 'Description']}
+  headingsMeta={[{}, {maxWidth: "300px"}]}
+  rows={[{cells: [
         <code>{"Promise<void>"}</code>,
         <>This method returns a <code>Promise</code> which doesn't resolve to any value.</>
     ]}]}
@@ -59,9 +59,9 @@ Starts a sign in flow that uses the Metamask browser extension to authenticate t
 #### Returns
 
 <Tables
-    headings={['Type', 'Description']}
-    headingsMeta={[{}, {maxWidth: "300px"}]}
-    rows={[{cells: [
+  headings={['Type', 'Description']}
+  headingsMeta={[{}, {maxWidth: "300px"}]}
+  rows={[{cells: [
         <code>{"Promise<SignInResource>"}</code>,
         <>This method returns a <code>Promise</code> which resolves to the current <a href="/reference-js/sign-in/sign-in"><code>SignIn</code></a>.</>
     ]}]}
@@ -73,13 +73,14 @@ Starts a sign in flow that uses the Metamask browser extension to authenticate t
 function authenticateWithWeb3(params: AuthenticateWithWeb3Params): Promise<SignInResource>;
 ```
 
+Starts a sign in flow that authenticates the user against their public wallet address.
+
 #### `AuthenticateWithWeb3Params`
 
-
 <Tables
-    headings={['Name', 'Type', 'Description']}
-    headingsMeta={[{}, {maxWidth: "300px"}, {maxWidth: "300px"}]}
-    rows={
+  headings={['Name', 'Type', 'Description']}
+  headingsMeta={[{}, {maxWidth: "300px"}, {maxWidth: "300px"}]}
+  rows={
         [{cells: [
             <code>identifier</code>,
             <code>{"string"}</code>,
@@ -96,9 +97,9 @@ function authenticateWithWeb3(params: AuthenticateWithWeb3Params): Promise<SignI
 ##### `GenerateSignatureParams`
 
 <Tables
-    headings={['Name', 'Type', 'Description']}
-    headingsMeta={[{}, {maxWidth: "300px"}, {maxWidth: "300px"}]}
-    rows={
+  headings={['Name', 'Type', 'Description']}
+  headingsMeta={[{}, {maxWidth: "300px"}, {maxWidth: "300px"}]}
+  rows={
         [{cells: [
             <code>identifier</code>,
             <code>{"string"}</code>,
@@ -137,9 +138,9 @@ type OAuthStrategy = |
 The OAuth provider that will be used for singing in. Must be one of the supported OAuthStrategy.
 
 <Tables
-    headings={['Name', 'Type', 'Description']}
-    headingsMeta={[{}, {}, {maxWidth: "300px"}]}
-    rows={[{cells: [
+  headings={['Name', 'Type', 'Description']}
+  headingsMeta={[{}, {}, {maxWidth: "300px"}]}
+  rows={[{cells: [
         <code>oauth_facebook</code>,
         <code>string</code>,
         <>Specify Facebook as the verification OAuth provider.</>
