docs: add email verification chapter

--- a/src/pages/reference-js/sign-up/email-verification.mdx
+++ b/src/pages/reference-js/sign-up/email-verification.mdx
@@ -15,7 +15,36 @@ function prepareEmailAddressVerification(params?: PrepareEmailAddressVerificatio
 
 Helper method that allows you to initiate a verification process for an email address. It basically sends a one-time code to the email address already supplied to the current sign up.
 
-This is equivalent to calling `SignUp.prepareVerification("email_code")`.
+The defaults of this method are equivalent to calling [`SignUp.prepareVerification("email_code")`](/reference-js/sign-up/verification#prepareverification).
+
+### `PrepareEmailAddressVerificationParams`
+
+<Tables
+  headings={["Name", "Type", "Description"]}
+  headingsMeta={[{}, {maxWidth: "300px"}, {maxWidth: "300px"}]}
+  rows={[
+ {cells: [
+      <code>strategy</code>,
+      <code>string</code>,
+      <>
+      The verification strategy to validate the user's sign-up request. The following strategies are supported:
+      <ul>
+        <li><strong><code>email_code</code></strong>: Send an email with a unique token to input.</li>
+        <li><strong><code>email_link</code></strong>: Send an email with a link which validates sign-up</li>
+      </ul>
+      </>
+ ]},
+ {cells: [
+    <code>redirectUrl</code>,
+    <code>string</code>,
+    <>
+    The URL to redirect the user to after the verification process is complete. <strong>Only supported on <code>email_link</code>, <code>oauth_*</code>, and <code>saml</code> strategies</strong>.
+    </>
+ ]}
+  ]}
+/>
+
+
 
 ## `attemptEmailAddressVerification()`
 
@@ -25,4 +54,22 @@ function attemptEmailAddressVerification(params: AttemptEmailAddressVerification
 
 Helper method that attempts to complete the verification process for an email address. It basically verifies that the supplied code is the same as the one-time code that was sent to the email address during the prepare verification phase.
 
-This is equivalent to calling `SignUp.attemptVerification({strategy: "email_code", ...params})`.
+This is equivalent to calling [`SignUp.attemptVerification({strategy: "email_code", ...params})`](/reference-js/sign-up/verification#attemptverification).
+
+### `AttemptEmailAddressVerificationParams`
+
+<Tables
+  headings={["Name", "Type", "Description"]}
+  headingsMeta={[{}, {maxWidth: "300px"}, {maxWidth: "300px"}]}
+  rows={[
+ {
+    cells: [
+        <code>code</code>,
+        <code>string</code>,
+        <>
+        The code that was sent to the user via email.
+        </>
+        ]
+ }
+  ]}
+/>
