--- a/src/pages/reference-js/sign-up/verification.mdx
+++ b/src/pages/reference-js/sign-up/verification.mdx
@@ -15,8 +15,8 @@ function prepareVerification(params: PrepareVerificationParams): Promise<SignUp>
 
 The `prepareVerification` is used to initiate the verification process for a field that requires it. As mentioned above, there are two fields that need to be verified:
 
-- emailAddress: The email address can be verified via an email code. This is a one-time code that is sent to the email already provided to the SignUp object. The `prepareVerification` sends this email.
-- phoneNumber: The phone number can be verified via a phone code. This is a one-time code that is sent via an SMS to the phone already provided to the SignUp object. The `prepareVerification` sends this SMS.
+- **`emailAddress`**: The email address can be verified via an email code. This is a one-time code that is sent to the email already provided to the SignUp object. The `prepareVerification` sends this email.
+- **`phoneNumber`**: The phone number can be verified via a phone code. This is a one-time code that is sent via an SMS to the phone already provided to the SignUp object. The `prepareVerification` sends this SMS.
 
 ### `PrepareVerificationParams`
 
