docs: finish web3 verification docs

--- a/src/pages/reference-js/sign-up/phone-verification.mdx
+++ b/src/pages/reference-js/sign-up/phone-verification.mdx
@@ -3,10 +3,9 @@ import { Tables } from "@/components/Table";
 import { Images } from "@/components/Images";
 import { CodeBlockTabs } from "@/components/CodeBlockTabs";
 
-# Phone Verificaiton
+# Phone Verification
 
-Test
-
+These are all methods on [the `SignUp` class](/reference-js/sign-up/sign-up) that allow you to verify a user's sign-up request via a phone number.
 
 ## `preparePhoneNumberVerification()`
 
@@ -16,7 +15,26 @@ function preparePhoneNumberVerification(params?: PreparePhoneNumberVerificationP
 
 Helper method that allows you to initiate a verification process for a phone number. It basically sends a one-time code to the phone number already supplied to the current sign up.
 
-This is equivalent to calling `SignUp.prepareVerification("phone_code")`.
+This is equivalent to calling [`SignUp.prepareVerification("phone_code")`](/reference-js/sign-up/verification#prepareverification).
+
+### `PreparePhoneNumberVerificationParams`
+
+<Tables
+  headings={["Name", "Type", "Description"]}
+  headingsMeta={[{}, {maxWidth: "300px"}, {maxWidth: "300px"}]}
+  rows={[
+ {cells: [
+      <code>strategy</code>,
+      <code>string</code>,
+      <>
+      The verification strategy to validate the user's sign-up request. The following strategies are supported:
+      <ul>
+        <li><strong><code>phone_code</code></strong>: Send an SMS with a unique token to input.</li>
+      </ul>
+      </>
+ ]},
+  ]}
+/>
 
 ## `attemptPhoneNumberVerification()`
 
@@ -26,4 +44,22 @@ function attemptPhoneNumberVerification(params: AttemptPhoneNumberVerificationPa
 
 Helper method that attempts to complete the verification process for a phone number. It basically verifies that the supplied code is the same as the one-time code that was sent to the phone number during the prepare verification phase.
 
-This is equivalent to calling `SignUp.attemptVerification({strategy: "phone_code", ...params})`.
+This is equivalent to calling [`SignUp.attemptVerification({strategy: "phone_code", ...params})`](/reference-js/sign-up/verification#attemptverification).
+
+### `AttemptPhoneNumberVerificationParams`
+
+<Tables
+  headings={["Name", "Type", "Description"]}
+  headingsMeta={[{}, {maxWidth: "300px"}, {maxWidth: "300px"}]}
+  rows={[
+ {
+    cells: [
+        <code>code</code>,
+        <code>string</code>,
+        <>
+        The code that was sent to the user via SMS.
+        </>
+        ]
+ }
+  ]}
+/>
