--- a/src/pages/reference-js/sign-up/email-verification.mdx
+++ b/src/pages/reference-js/sign-up/email-verification.mdx
@@ -3,9 +3,9 @@ import { Tables } from "@/components/Table";
 import { Images } from "@/components/Images";
 import { CodeBlockTabs } from "@/components/CodeBlockTabs";
 
-# Email Verificaiton
+# Email Verification
 
-Test
+These are all methods on [the `SignUp` class](/reference-js/sign-up/sign-up) that allow you to verify a user's sign-up request via email.
 
 ## `prepareEmailAddressVerification()`
 
