--- a/src/pages/reference-js/sign-up/web3-verification.mdx
+++ b/src/pages/reference-js/sign-up/web3-verification.mdx
@@ -3,9 +3,9 @@ import { Tables } from "@/components/Table";
 import { Images } from "@/components/Images";
 import { CodeBlockTabs } from "@/components/CodeBlockTabs";
 
-# Web3 Verificaiton
+# Web3 Verification
 
-Test
+These are all methods on [the `SignUp` class](/reference-js/sign-up/sign-up) that allow you to verify a user's sign-up request via a web3 wallet.
 
 ## `prepareWeb3WalletVerification()`
 
@@ -15,7 +15,7 @@ function prepareWeb3WalletVerification(): Promise<SignUp>;
 
 Helper method that allows you to initiate a verification process for a web3 wallet public address. It sends the public address to the server and expects a nonce that will need to be signed.
 
-This is equivalent to calling `SignUp.prepareVerification("web3_metamask_signature")`.
+This is equivalent to calling [`SignUp.prepareVerification("web3_metamask_signature")`](/reference-js/sign-up/verification#prepareverification).
 
 ## `attemptWeb3WalletVerification()`
 
@@ -23,6 +23,21 @@ This is equivalent to calling `SignUp.prepareVerification("web3_metamask_signatu
 function attemptWeb3WalletVerification(params: AttemptWeb3WalletVerificationParams): Promise<SignUp>;
 ```
 
-Helper method that attempts to complete the verification process for a web3 wallet public address. It basically verifies that the supplied code is the same as the one-time code that was sent to the phone number during the prepare verification phase.
+Helper method that attempts to complete the verification process for a web3 wallet public address.
 
-This is equivalent to calling `SignUp.attemptVerification({strategy: "web3_metamask_signature", signature: "..." })`.
+This is equivalent to calling [`SignUp.attemptVerification({strategy: "web3_metamask_signature", signature: "..." })`](/reference-js/sign-up/verification#attemptverification).
+
+### `AttemptWeb3WalletVerificationParams`
+
+
+<Tables
+  headings={['Name', 'Type', 'Description']}
+  headingsMeta={[{}, {maxWidth: "300px"}, {maxWidth: "300px"}]}
+  rows={
+        [{cells: [
+            <code>identifier</code>,
+            <code>{"string"}</code>,
+            <>The user's Web3 ID</>
+        ]}
+    ]}
+/>
