Add import of createClerkClient to Retrieve Full User example

--- a/src/pages/quickstarts/full-stack/remix.mdx
+++ b/src/pages/quickstarts/full-stack/remix.mdx
@@ -386,6 +386,10 @@ export const loader: LoaderFunction = async (args) => {
 #### Retrieve Full User
 
 ```tsx filename="routes/example.tsx" copy
+import { LoaderFunction, redirect } from "@remix-run/node";
+import { getAuth } from "@clerk/remix/ssr.server";
+import { createClerkClient } from '@clerk/remix/api.server';
+
 export const loader: LoaderFunction = async (args) => {
   const { userId } = await getAuth(args);
 
