chore: document signupcreate params

--- a/src/pages/reference-js/sign-up/sign-up.mdx
+++ b/src/pages/reference-js/sign-up/sign-up.mdx
@@ -66,6 +66,30 @@ The form of the given `params` depends on the configuration of the instance. Cho
 
 The `create` method will return a promise of the new SignUp object. This sign up might be complete if you supply the required fields in one go. However, this is not mandatory. Our sign-up process provides great flexibility and allows users to easily create multi-step sign-up flows.
 
+#### `SignUpCreateParams`
+
+<Tables
+  headings={["Name", "Type", "Description"]}
+  headingsMeta={[{}, {maxWidth: "300px"}, {maxWidth: "300px"}]}
+  rows={[
+    {cells: [<code>firstName</code>, <code>string | null</code>, <>The user's first name. This option is available only if name is selected in personal information. Please check the instance settings for more information.</>]},
+{cells: [<code>lastName</code>, <code>string | null</code>, <>The user's last name. This option is available only if name is selected in personal information. Please check the instance settings for more information.</>]},
+{cells: [<code>password</code>, <code>string | null</code>, <>The user's password. This option is available only if password-based authentication is selected. Please check the instance settings for more information.</>]},
+{cells: [<code>birthday</code>, <code>string | null</code>, <>The user's birthday. This option is available only if birthday is selected in personal information. Please check the instance settings for more information.</>]},
+{cells: [<code>gender</code>, <code>string | null</code>, <>The user's gender. This option is available only if gender is selected in personal information. Please check the instance settings for more information.</>]},
+{cells: [<code>emailAddress</code>, <code>string | null</code>, <>The user's email address. This option is available only if email address is selected in contact information. Keep in mind that the email address requires an extra verification process. Please check the instance settings for more information.</>]},
+{cells: [<code>phoneNumber</code>, <code>string | null</code>, <>The user's phone number. This option is available only if phone number is selected in contact information. Keep in mind that the phone number requires an extra verification process. Please check the instance settings for more information.</>]},
+{cells: [<code>web3Wallet</code>, <code>string | null</code>, <>The user's Web3 wallet public address. In <a href="https://docs.metamask.io/guide/common-terms.html#address-public-key">Ethereum</a>, the address is made up of <strong><code>0x</code> + <code>40 hexadecimal characters</code></strong>.</>]},
+{cells: [<code>username</code>, <code>string | null</code>, <>The user's username. This option is available only if usernames are enabled. Please check the instance settings for more information.</>]},
+{cells: [<code>unsafeMetadata</code>, <code>{"\{\[string\]\: any\} \| null"}</code>, <>Metadata that can be read and set from the frontend. Once the sign up is complete, the value of this field will be automatically copied to the newly created user's unsafe metadata. One common use case for this attribute is to use it to implement custom fields that can be collected during sign up and will automatically be attached to the created User object.</>]},
+{cells: [<code>strategy</code>, <code>{"OAuthStrategy \| SamlStrategy \| TicketStrategy"}</code>, <>The strategy to use for the sign-up flow.</>]},
+{cells: [<code>redirectUrl</code>, <code>string</code>, <>The redirect URL after the sign-up flow has completed.</>]},
+{cells: [<code>actionCompleteRedirectUrl</code>, <code>string</code>, <>The redirect URL after the action has completed for OAuth and SAML sign-up strategies</>]},
+{cells: [<code>transfer</code>, <code>boolean</code>, <>Transfer the user to a dedicated sign up for an oauth flow.</>]},
+{cells: [<code>ticket</code>, <code>string</code>, <>If the strategy is ticket you need to provide the ticket or token generated from the Backend API.</>]},
+  ]}
+/>
+
 ### `update()`
 
 ```typescript
