chore: finish sign up reference docs

--- a/src/pages/reference-js/sign-up/sign-up.mdx
+++ b/src/pages/reference-js/sign-up/sign-up.mdx
@@ -100,10 +100,17 @@ This method is used to update the current sign up.
 
 As with `create`, the form of the given `params` depends on the configuration of the instance.
 
+#### `SignUpUpdateParams`
+
+`SignUpUpdateParams` is a mirror of [`SignUpCreateParams`](#signupcreateparams) with the same fields and types.
+
 ### `createMagicLinkFlow()`
 
 ```typescript
-function createMagicLinkFlow(): CreateMagicLinkFlowReturn<StartMagicLinkFlowParams, SignUpResource>;
+function createMagicLinkFlow(): {
+  startMagicLinkFlow: (params: StartMagicLinkFlowParams) => Promise<SignUp>;
+  cancelMagicLinkFlow: () => void;
+};
 ```
 
 Sets up a sign up with magic link flow. Calling `createMagicLinkFlow()` will return two functions.
@@ -111,3 +118,57 @@ Sets up a sign up with magic link flow. Calling `createMagicLinkFlow()` will ret
 The first function is async and starts the magic link flow, preparing a magic link verification. It sends the magic link email and starts polling for verification results. The signature is `startMagicLinkFlow({ redirectUrl: string }) => Promise<SignUpResource>`.
 
 The second function can be used to stop polling at any time, allowing for full control of the flow and cleanup. The signature is `cancelMagicLinkFlow() => void`.
+
+#### Returns
+
+`createMagicLinkFlow` returns an object with two functions:
+
+<Tables
+  headings={["Name", "Type", "Description"]}
+  headingsMeta={[{}, {maxWidth: "300px"}, {maxWidth: "300px"}]}
+  rows={[
+    {cells: [<code>startMagicLinkFlow</code>, <code>(params: <a href="#startmagiclinkflowparams">StartMagicLinkFlowParams</a>) {"=>"} Promise{"<"}<a href="/reference-js/sign-up/sign-up">SignUp</a>{">"}</code>, <>Function to start the magic link flow. It prepares a magic link verification and polls for the verification result.</>]},
+    {cells: [<code>cancelMagicLinkFlow</code>, <code>{"() => void"}</code>, <>Function to cleanup the magic link flow. Stops waiting for verification results.</>]},
+  ]}
+/>
+
+#### `StartMagicLinkFlowParams`
+
+
+<Tables
+  headings={["Name", "Type", "Description"]}
+  headingsMeta={[{}, {maxWidth: "300px"}, {maxWidth: "300px"}]}
+  rows={[
+    {cells: [<code>redirectUrl</code>, <code>string</code>, <>The magic link target URL. Users will be redirected here once they click the magic link from their email.</>]}
+  ]}
+/>
+
+## Additional Methods
+
+In addition to the methods listed above, the `SignUp` class also has the following methods:
+
+### Authenticate With
+
+*   [`authenticateWithRedirect()`](/reference-js/sign-up/authenticate-with#authenticatewithredirect)
+*   [`authenticateWithMetamask()`](/reference-js/sign-up/authenticate-with#authenticatewithmetamask)
+*   [`authenticateWithWeb3()`](/reference-js/sign-up/authenticate-with#authenticatewithweb3)
+
+### Verification
+
+*   [`prepareVerification()`](/reference-js/sign-up/verification#prepareverification)
+*   [`attemptVerification()`](/reference-js/sign-up/verification#attemptverification)
+
+### Email Verification
+
+*   [`prepareEmailAddressVerification()`](/reference-js/sign-up/email-verification#prepareemailaddressverification)
+*   [`attemptEmailAddressVerification()`](/reference-js/sign-up/email-verification#attemptemailaddressverification)
+
+### Phone Verification
+
+*   [`preparePhoneNumberVerification()`](/reference-js/sign-up/phone-verification#preparephonenumberverification)
+*   [`attemptPhoneNumberVerification()`](/reference-js/sign-up/phone-verification#attemptphonenumberverification)
+
+### Web3 Verification
+
+*   [`prepareWeb3WalletVerification()`](/reference-js/sign-up/web3-verification#prepareweb3walletverification)
+*   [`attemptWeb3WalletVerification()`](/reference-js/sign-up/web3-verification#attemptweb3walletverification)
