docs: document the email address class

--- a/src/pages/reference-js/sign-in/first-factor.mdx
+++ b/src/pages/reference-js/sign-in/first-factor.mdx
@@ -7,7 +7,6 @@ import { CodeBlockTabs } from "@/components/CodeBlockTabs";
 
 These are all methods on [the `SignIn` class](/reference-js/sign-in/sign-in) that allow you to handle the first factor of a multi-factor authentication flow.
 
-
 ## `prepareFirstFactor()`
 
 ```typescript
@@ -19,7 +18,6 @@ Begins the first factor verification process. This is a required step in order t
 Common scenarios are one-time code (OTP) or social account (SSO) verification. This is determined by the accepted `strategy` parameter values. Each authentication identifier supports different strategies.
 
 ### `PrepareFirstFactorParams`
-
 
 <Tables
   headings={["Name", "Type", "Description"]}
@@ -42,7 +40,6 @@ Common scenarios are one-time code (OTP) or social account (SSO) verification. T
 {cells: [<code>actionCompleteRedirectUrl?</code>, <code>string</code>, <>The URL that the user will be redirected to, after successful authorization from the OAuth provider and Clerk sign in. This parameter is required only for OAuth strategies <strong><code>(oauth_*)</code></strong>. </>]},
  ]}
 />
-
 
 ### Returns
 
@@ -68,7 +65,6 @@ Depending on the strategy that was selected when the verification was prepared, 
 
 ### `AttemptFirstFactorParams`
 
-
 <Tables
   headings={["Name", "Type", "Description"]}
   headingsMeta={[{}, {maxWidth: "300px"}, {maxWidth: "300px"}]}
@@ -83,8 +79,8 @@ Depending on the strategy that was selected when the verification was prepared, 
     <li><strong><code>web3_metamask_signature</code></strong>: The verification will attempt to be completed using the user's web3 wallet public address.</li>
     </ul>
     </>]},
-    {cells: [<code>code?</code>, <code>string</code>, <>The one-time code that was sent to the user as part of this verification step. Required when <code>strategy</code> is **email_code** or **phone_code**.</>]},
-    {cells: [<code>password?</code>, <code>string</code>, <>The user's password string. Required when <code>strategy</code> is **password**.</>]},
+    {cells: [<code>code?</code>, <code>string</code>, <>The one-time code that was sent to the user as part of this verification step. Required when <code>strategy</code> is <strong><code>email_code</code></strong> or <strong><code>phone_code</code></strong>.</>]},
+    {cells: [<code>password?</code>, <code>string</code>, <>The user's password string. Required when <code>strategy</code> is <strong><code>password</code></strong>.</>]},
     {cells: [<code>signature?</code>, <code>string</code>, <>Web3 wallet generated signature to be verified. This parameter is required only for web3 verification strategies.</>]},
   ]}
 />
@@ -92,9 +88,9 @@ Depending on the strategy that was selected when the verification was prepared, 
 ### Returns
 
 <Tables
-    headings={["Type", "Description"]}
-    headingsMeta={[{}, {maxWidth: "300px"}]}
-    rows={[
+  headings={["Type", "Description"]}
+  headingsMeta={[{}, {maxWidth: "300px"}]}
+  rows={[
      {cells: [<code>Promise{"<"}<a href="/reference-js/sign-in/sign-in">SignIn</a>{">"}</code>, <>This method returns a <code>Promise</code> which resolves with a <code><a href="/reference-js/sign-in/sign-in">SignIn</a></code> object. Check the <code>firstFactorVerification</code> attribute for the status of the first factor verification process.</>]}
         ]}
 />
